--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ chrono = "0.4.38"
 clap = { version = "4.5.4", features = ["derive"] }
 fake-useragent = "0.1.3"
 geoip2 = "0.1.7"
+handlebars = "5.1.2"
 isbot = "0.1.3"
 lazy_static = "1.4.0"
 mongodb = {version = "2.8.2", features = ["sync"], default-features = false}
@@ -20,6 +21,7 @@ redis = "0.25.3"
 reqwest = "0.12.4"
 rocket = "0.5.0"
 rocket_db_pools = "0.1.0"
+sailfish = "0.8.3"
 serde = "1.0.202"
 serde_json = "1.0.117"
 tera = "1.19.1"
