add 3000 port for web admin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       - ./web:/app
     working_dir: /app
     command: npm run start
+    ports:
+      - 3000:3000
     depends_on:
       - redis
       - mongo
