--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,8 @@ services:
     command: npm run start
     # ports:
     #   - 3000:3000
+    environment:
+      - NODE_ENV=production
     depends_on:
       - redis
       - mongo
