add support dynamic detect IP header

--- a/nginx.conf
+++ b/nginx.conf
@@ -31,10 +31,21 @@ http {
             
             proxy_pass         http://docker-reverse;
             proxy_redirect     off;
-            proxy_set_header   host $host;
-            proxy_set_header   x-real-ip $remote_addr;
-            proxy_set_header   x-forwarded-for $proxy_add_x_forwarded_for;
-            proxy_set_header   x-forwarded-host $server_name;
+            proxy_set_header Host $host;
+            proxy_set_header Hostname $hostname;
+            proxy_set_header Realpath-Root $realpath_root;
+            proxy_set_header Remote-Addr $remote_addr;
+            proxy_set_header Remote-Port $remote_port;
+            proxy_set_header Request-ID $request_id;
+            proxy_set_header Request-URI $request_uri;
+            proxy_set_header Scheme $scheme;
+            proxy_set_header Secure-Link $secure_link;
+            proxy_set_header Server-Name $server_name;
+            proxy_set_header Server-Addr $server_addr;
+            proxy_set_header Server-Protocol $server_protocol;
+            proxy_set_header Session-Time $session_time;
+            proxy_set_header Slice-Range $slice_range;
+
         }
     }
 }
