--- a/docker-compose.wp.yml
+++ b/docker-compose.wp.yml
@@ -7,8 +7,8 @@ services:
     image: wordpress:latest
     volumes:
       - ./docker/wp:/var/www/html
-    # ports:
-    #   - 80:80
+    ports:
+      - 1338:80
     restart: always
     environment:
       - WORDPRESS_DB_HOST=wp-db
