--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 asn-db = "0.1.4"
 chrono = "0.4.38"
 clap = { version = "4.5.4", features = ["derive"] }
+colored = "2.1.0"
 fake-useragent = "0.1.3"
 geoip2 = "0.1.7"
 handlebars = "5.1.2"
@@ -16,13 +17,16 @@ isbot = "0.1.3"
 lazy_static = "1.4.0"
 mongodb = {version = "2.8.2", features = ["sync"], default-features = false}
 nanoid = "0.4.0"
+num_cpus = "1.16.0"
 once_cell = "1.19.0"
 redis = "0.25.3"
 reqwest = "0.12.4"
 rocket = "0.5.0"
+rocket_contrib = "0.4.11"
 rocket_db_pools = "0.1.0"
 sailfish = "0.8.3"
 serde = "1.0.202"
 serde_json = "1.0.117"
-tera = "1.19.1"
+toml = "0.8.13"
 tor-geoip = "0.18.0"
+v8 = "0.92.0"
