--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bellissimo"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -12,6 +12,7 @@ clap = { version = "4.5.4", features = ["derive"] }
 colored = "2.1.0"
 fake-useragent = "0.1.3"
 geoip2 = "0.1.7"
+handlebars = "5.1.2"
 isbot = "0.1.3"
 lazy_static = "1.4.0"
 mongodb = {version = "2.8.2", features = ["sync"], default-features = false}
@@ -21,6 +22,7 @@ once_cell = "1.19.0"
 redis = "0.25.3"
 reqwest = "0.12.4"
 rocket = "0.5.0"
+rocket_db_pools = "0.1.0"
 sailfish = "0.8.3"
 serde = "1.0.202"
 serde_json = "1.0.117"
