--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,5 @@ serde_json = "1.0.117"
 toml = "0.8.13"
 v8 = "0.92.0"
 fake = { version = "2.9.2", features = ["derive"] }
+rand = "0.8.5"
+uaparser = "0.6.3"
