--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,5 @@ v8 = "0.92.0"
 fake = { version = "2.9.2", features = ["derive"] }
 rand = "0.8.5"
 uaparser = "0.6.3"
+fastcgi-client = "0.9.0"
+tokio = { version = "1.38.0", features = ["full"] }
