--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@codeium/react-code-editor": "^1.0.12",
+    "@monaco-editor/react": "^4.6.0",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
@@ -34,6 +36,8 @@
     "react-dom": "^18.2.0",
     "react-if": "^4.1.5",
     "react-object-view": "^0.3.5",
+    "react-prism-editor": "^1.1.2",
+    "react-simple-code-editor": "^0.13.1",
     "react-syntax-highlighter": "^15.5.0",
     "zod": "^3.22.4",
     "zor": "^1.1.5"
@@ -41,6 +45,7 @@
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
     "@types/lodash-es": "^4.17.12",
+    "@types/prismjs": "^1.26.4",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
