--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,4 @@ rand = "0.8.5"
 uaparser = "0.6.3"
 fastcgi-client = "0.9.0"
 tokio = { version = "1.38.0", features = ["full"] }
+elasticsearch = "8.5.0-alpha.1"
