--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: bitnami/kibana:latest
     container_name: kibana
     environment:
-      KIBANA_ELASTICSEARCH_URL=elasticsearch
+      - KIBANA_ELASTICSEARCH_URL=elasticsearch
     ports:
       - 5601:5601
     volumes:
