--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: bitnami/kibana:latest
     container_name: kibana
     environment:
-      - KIBANA_ELASTICSEARCH_URL=elasticsearch
+      - KIBANA_ELASTICSEARCH_URL=bell-elasticsearch
     ports:
       - 5601:5601
     volumes:
@@ -66,7 +66,7 @@ services:
     container_name: phpfpm
     image: 'bitnami/php-fpm:latest'
  
-  elasticsearch:
+  bell-elasticsearch:
     image: 'bitnami/elasticsearch:latest'
     container_name: elasticsearch
     volumes:
@@ -88,7 +88,7 @@ services:
       - MONGO_URI=mongodb://mongo:27017
       - PHP_FPM_HOST=phpfpm
       - PHP_FPM_PORT=9000
-      - ELASTIC_URI=http://elasticsearch:9200
+      - ELASTIC_URI=http://bell-elasticsearch:9200
     depends_on:
       - redis
       - mongo
