--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,14 +68,9 @@ services:
     volumes:
       - ./docker/elasticsearch-data-persistence:/bitnami/elasticsearch/data
     healthcheck:
-     test:
-       [
-         "CMD-SHELL",
-         "curl https://localhost:9200",
-       ]
-     interval: 10s
-     timeout: 10s
-     retries: 120
+      interval: 10s
+      retries: 80
+      test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:8200/
 
   bellissimo:
     restart: always
