--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
     volumes:
       - ./docker/elasticsearch-data-persistence:/bitnami/elasticsearch/data
     healthcheck:
-      test: curl -s http://elastic:9200 >/dev/null || exit 1
+      test: curl -s http://localhost:9200 >/dev/null || exit 1
       interval: 5s
       timeout: 5s
       retries: 10
