--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,6 @@ uaparser = "0.6.3"
 fastcgi-client = "0.9.0"
 tokio = { version = "1.38.0", features = ["full"] }
 elasticsearch = "8.5.0-alpha.1"
+glob = "0.3.1"
+log = "0.4.21"
+get-size = "0.1.4"
