--- a/web/package.json
+++ b/web/package.json
@@ -28,12 +28,15 @@
     "install": "^0.13.0",
     "isbot": "^4.1.0",
     "jwt-decode": "^4.0.0",
+    "language-classifier": "^0.0.1",
+    "language-detect": "^1.1.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "moment": "^2.30.1",
     "preline": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-if": "^4.1.5",
     "react-object-view": "^0.3.5",
     "react-prism-editor": "^1.1.2",
