refactoring and cleanup

--- a/web/package.json
+++ b/web/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@codeium/react-code-editor": "^1.0.12",
+    "@fnando/sparkline": "^0.3.10",
     "@monaco-editor/react": "^4.6.0",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
+    "apexcharts": "^3.49.1",
     "axios": "^1.6.8",
     "base-64": "^1.0.0",
+    "chart.js": "^4.4.3",
     "classname": "^0.0.0",
     "classnames": "^2.5.1",
     "eventemitter3": "^5.0.1",
@@ -35,13 +38,17 @@
     "moment": "^2.30.1",
     "preline": "^2.0.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-chartkick": "^0.5.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-if": "^4.1.5",
+    "react-json-editor-ajrm": "^2.5.14",
     "react-object-view": "^0.3.5",
     "react-prism-editor": "^1.1.2",
     "react-simple-code-editor": "^0.13.1",
+    "react-sparklines": "^1.7.0",
     "react-syntax-highlighter": "^15.5.0",
     "zod": "^3.22.4",
     "zor": "^1.1.5"
@@ -52,6 +59,7 @@
     "@types/prismjs": "^1.26.4",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/react-json-editor-ajrm": "^2.5.6",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.19",
