--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ nanoid = "0.4.0"
 num_cpus = "1.16.0"
 once_cell = "1.19.0"
 redis = "0.25.3"
-reqwest = "0.12.4"
+reqwest = {version = "0.12.4" , features = ["blocking"]}
 rocket = "0.5.0"
 serde = "1.0.202"
 serde_json = "1.0.117"
