--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,15 @@
+[build]
+rustflags = ["-Z", "threads=8"]
+
+[package.metadata.leptos]
+separate-front-target-dir = true
+
+[profile.dev]
+opt-level = 1
+
+[profile.dev.package."*"]
+opt-level = 3
+
 [package]
 name = "bellissimo"
 version = "0.1.0"
@@ -14,7 +26,7 @@ fake-useragent = "0.1.3"
 geoip2 = "0.1.7"
 isbot = "0.1.3"
 lazy_static = "1.4.0"
-mongodb = {version = "2.8.2", features = ["sync"], default-features = false}
+mongodb = {version = "3.0.0", features = ["sync"], default-features = false}
 nanoid = "0.4.0"
 num_cpus = "1.16.0"
 once_cell = "1.19.0"
@@ -24,7 +36,7 @@ rocket = "0.5.0"
 serde = "1.0.202"
 serde_json = "1.0.117"
 toml = "0.8.13"
-v8 = "0.92.0"
+v8 = "0.95.0"
 fake = { version = "2.9.2", features = ["derive"] }
 rand = "0.8.5"
 uaparser = "0.6.3"
