--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,7 @@ services:
       - ./public:/usr/src/app/public
       - ./registry:/usr/src/app/registry
       - ./ipsum.toml:/usr/src/app/ipsum.toml:ro
+      - ./config.local.toml:/usr/src/app/config.local.toml:ro
     build:
       context: .
       dockerfile: Dockerfile
