--- a/web/package.json
+++ b/web/package.json
@@ -24,9 +24,11 @@
     "chart.js": "^4.4.3",
     "classname": "^0.0.0",
     "classnames": "^2.5.1",
+    "countries-list": "^3.1.0",
     "eventemitter3": "^5.0.1",
     "flat": "^6.0.1",
     "flatten-anything": "^3.0.5",
+    "framer-motion": "^11.2.12",
     "hash-it": "^6.0.0",
     "humanize-string": "^3.0.0",
     "install": "^0.13.0",
