--- a/web/package.json
+++ b/web/package.json
@@ -49,13 +49,15 @@
     "react-icons": "^5.2.1",
     "react-if": "^4.1.5",
     "react-json-editor-ajrm": "^2.5.14",
-    "react-json-view": "^1.21.3",
+    "react-json-pretty": "^2.2.0",
     "react-object-view": "^0.3.5",
     "react-prism-editor": "^1.1.2",
     "react-simple-code-editor": "^0.13.1",
     "react-sparklines": "^1.7.0",
     "react-syntax-highlighter": "^15.5.0",
     "string-to-color": "^2.2.2",
+    "use-query-params": "^2.2.1",
+    "use-state-with-callback": "^3.0.2",
     "zod": "^3.22.4",
     "zor": "^1.1.5"
   },
