--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,4 @@ glob = "0.3.1"
 log = "0.4.21"
 get-size = "0.1.4"
 css-minify = "0.3.1"
+paris = {version = "1.5.15", features = ["macros", "timestamps"]}
