add support Scenario

--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,8 @@
     "@codeium/react-code-editor": "^1.0.12",
     "@fnando/sparkline": "^0.3.10",
     "@loadable/component": "^5.16.4",
+    "@mdx-js/mdx": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
     "@monaco-editor/react": "^4.6.0",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
@@ -39,8 +41,11 @@
     "language-detect": "^1.1.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "markdown-to-jsx": "^7.4.7",
     "moment": "^2.30.1",
     "preline": "^2.0.3",
+    "prism-react-renderer": "^2.3.1",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-chartkick": "^0.5.3",
@@ -68,6 +73,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/react-json-editor-ajrm": "^2.5.6",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.19",
