--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,7 @@ services:
     image: 'bitnami/php-fpm:latest'
     volumes:
       - ./public:/usr/src/app/public
+      - ./containers:/usr/src/app/containers
  
   bell-elasticsearch:
     restart: always
