--- a/web/package.json
+++ b/web/package.json
@@ -13,19 +13,12 @@
   "dependencies": {
     "@codeium/react-code-editor": "^1.0.12",
     "@fnando/sparkline": "^0.3.10",
-    "@loadable/component": "^5.16.4",
-    "@mdx-js/mdx": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
     "@monaco-editor/react": "^4.6.0",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
-    "apexcharts": "^3.49.1",
     "axios": "^1.6.8",
-    "axios-retry": "^4.4.1",
     "base-64": "^1.0.0",
-    "chart.js": "^4.4.3",
-    "classname": "^0.0.0",
     "classnames": "^2.5.1",
     "countries-list": "^3.1.0",
     "eventemitter3": "^5.0.1",
@@ -40,31 +33,18 @@
     "language-classifier": "^0.0.1",
     "language-detect": "^1.1.0",
     "lodash": "^4.17.21",
-    "lodash-es": "^4.17.21",
     "markdown-to-jsx": "^7.4.7",
     "moment": "^2.30.1",
     "preline": "^2.0.3",
     "prism-react-renderer": "^2.3.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.1",
-    "react-chartkick": "^0.5.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1",
-    "react-if": "^4.1.5",
     "react-json-editor-ajrm": "^2.5.14",
     "react-json-pretty": "^2.2.0",
     "react-object-view": "^0.3.5",
-    "react-prism-editor": "^1.1.2",
-    "react-simple-code-editor": "^0.13.1",
-    "react-sparklines": "^1.7.0",
-    "react-syntax-highlighter": "^15.5.0",
-    "string-to-color": "^2.2.2",
-    "use-query-params": "^2.2.1",
-    "use-state-with-callback": "^3.0.2",
-    "zod": "^3.22.4",
-    "zor": "^1.1.5"
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
