--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,14 +18,11 @@ edition = "2021"
 asn-db = "0.1.4"
 chrono = "0.4.38"
 clap = { version = "4.5.4", features = ["derive"] }
-colored = "2.1.0"
-fake-useragent = "0.1.3"
 geoip2 = "0.1.7"
 isbot = "0.1.3"
 lazy_static = "1.4.0"
 mongodb = {version = "2.8.2", features = ["sync"], default-features = false}
 nanoid = "0.4.0"
-num_cpus = "1.16.0"
 once_cell = "1.19.0"
 redis = "0.25.3"
 reqwest = {version = "0.12.4" , features = ["blocking"]}
@@ -33,7 +30,6 @@ rocket = "0.5.0"
 serde = "1.0.202"
 serde_json = "1.0.117"
 toml = "0.8.13"
-v8 = "0.92.0"
 rand = "0.8.5"
 uaparser = "0.6.3"
 fastcgi-client = "0.9.0"
@@ -44,3 +40,7 @@ get-size = "0.1.4"
 css-minify = "0.3.1"
 paris = {version = "1.5.15", features = ["macros", "timestamps"]}
 futures = "0.3.30"
+clokwerk = "0.4.0"
+job_scheduler = "1.2.1"
+cron = "0.12.1"
+closure = "0.3.0"
