--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "base-64": "^1.0.0",
     "classnames": "^2.5.1",
     "countries-list": "^3.1.0",
+    "d3": "^7.9.0",
     "eventemitter3": "^5.0.1",
     "flat": "^6.0.1",
     "flatten-anything": "^3.0.5",
@@ -44,16 +45,19 @@
     "react-json-editor-ajrm": "^2.5.14",
     "react-json-pretty": "^2.2.0",
     "react-object-view": "^0.3.5",
+    "react-simple-maps": "^3.0.0",
     "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
+    "@types/d3": "^7.4.3",
     "@types/lodash-es": "^4.17.12",
     "@types/prismjs": "^1.26.4",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/react-json-editor-ajrm": "^2.5.6",
+    "@types/react-simple-maps": "^3.0.5",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
