--- a/web/package.json
+++ b/web/package.json
@@ -36,6 +36,7 @@
     "lodash": "^4.17.21",
     "markdown-to-jsx": "^7.4.7",
     "moment": "^2.30.1",
+    "monaco-themes": "^0.4.4",
     "preline": "^2.0.3",
     "prism-react-renderer": "^2.3.1",
     "prismjs": "^1.29.0",
